# CMake_CTest

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/: MathFunctions.h
src/: MathFunctions.cpp
tests/: CMakeLists.txt  test_math.cpp
